--- a/packages/color-website/package.json
+++ b/packages/color-website/package.json
@@ -14,10 +14,10 @@
     "clean": "app clean"
   },
   "dependencies": {
+    "@neetly/colorspace": "workspace:packages/colorspace",
     "@neetly/ui": "workspace:packages/ui",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "culori": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
