--- a/packages/colorspace/tsconfig.json
+++ b/packages/colorspace/tsconfig.json
@@ -7,9 +7,9 @@
     "rootDir": "./src",
     "outDir": "./lib",
 
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "types": ["@buncho/builder"]
+    "lib": ["ESNext"],
+    "types": []
   },
 
-  "references": [{ "path": "../ui" }, { "path": "../colorspace" }]
+  "references": []
 }
