--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "devDependencies": {
     "@buncho/eslint-config": "^6.0.0",
     "@buncho/tsconfig": "^2.0.0",
+    "@neetly/colorgen": "workspace:packages/colorgen",
     "@prettier/plugin-xml": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
-    "culori": "^2.0.3",
     "eslint": "^8.19.0",
     "prettier": "^2.7.1",
     "svgo": "^2.8.0",
