--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@buncho/builder": "^5.5.0",
+    "@neetly/colorgen": "workspace:packages/colorgen",
     "typescript": "^4.7.4"
   }
 }
