--- a/packages/design-website/package.json
+++ b/packages/design-website/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@neetly/design-website",
   "private": true,
-  "homepage": "https://github.com/neetly/design",
+  "homepage": "https://github.com/neetly/ui",
   "repository": {
     "type": "git",
-    "url": "git@github.com:neetly/design.git",
-    "directory": "packages/website"
+    "url": "git@github.com:neetly/ui.git",
+    "directory": "packages/design-website"
   },
   "license": "Apache-2.0",
   "scripts": {
