--- a/packages/color-website/package.json
+++ b/packages/color-website/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@neetly/design-color-website",
+  "name": "@neetly/color-website",
   "private": true,
-  "homepage": "https://github.com/neetly/design",
+  "homepage": "https://github.com/neetly/ui",
   "repository": {
     "type": "git",
-    "url": "git@github.com:neetly/design.git",
+    "url": "git@github.com:neetly/ui.git",
     "directory": "packages/color-website"
   },
   "license": "Apache-2.0",
