--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@neetly/palette",
   "version": "5.0.0",
-  "homepage": "https://github.com/neetly/design",
+  "homepage": "https://github.com/neetly/ui",
   "repository": {
     "type": "git",
-    "url": "git@github.com:neetly/design.git",
+    "url": "git@github.com:neetly/ui.git",
     "directory": "packages/palette"
   },
   "license": "Apache-2.0",
